Misc minor java code cleanup